--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4178,7 +4178,7 @@ body:before {
   -webkit-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)), url("https://viruchith.com/images/switch.jpg");
+  background-image: linear-gradient(rgba(17, 17, 17, 0.25), rgba(17, 17, 17, 0.25)), url("https://cdn.jsdelivr.net/gh/viruchith/blog-static@6c37dc9/switch.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
